# AICamera

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/caffe2/proto/: caffe2.pb.h  prof_dag.pb.h
gradle/wrapper/: gradle-wrapper.properties
